--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://yoursite.com
 title: Rashmi Yadav
-subtitle: Ruby, Rails Developer
+subtitle: Ruby on Rails Developer
 author: Rashmi Yadav
 simple_search: http://google.com/search
 description:
@@ -63,13 +63,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: raysrashmi
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: raysrashmi
 twitter_tweet_button: true
 
 # Google +1
@@ -98,8 +98,11 @@ google_analytics_tracking_id:
 
 # Facebook Like
 facebook_like: false
+
 navigation:
 - text: Home
   url: /index.html
 - text: About
   url: /about.html
+- text: Archives
+  url: /blog/archives/index.html
