--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://raysrashmi.com
 title: Rashmi Yadav
 subtitle: Ruby on Rails Developer
 author: Rashmi Yadav
