--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description:
 date_format: "ordinal"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
-subscribe_rss: http://feeds.feedburner.com/raysrashmi/atom.xml
+subscribe_rss: http://feeds.feedburner.com/raysrashmi
 subscribe_email:
 # RSS feeds can list your email address if you like
 email:
