--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://raysrashmi.com
 title: Rashmi Yadav
-subtitle: Ruby on Rails Developer
+subtitle: Programmer
 author: Rashmi Yadav
 simple_search: http://google.com/search
 description:
