--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://raysrashmi.com
+url: http://raysrashmi.github.io
 title: Rashmi Yadav
 subtitle: Programmer
 author: Rashmi Yadav
